@@ -9,17 +9,22 @@
   <artifactId>jetty-client</artifactId>
   <name>Jetty :: Asynchronous HTTP Client</name>
   <url>http://www.eclipse.org/jetty</url>
+
   <properties>
     <bundle-symbolic-name>${project.groupId}.client</bundle-symbolic-name>
     <jetty.test.policy.loc>target/test-policy</jetty.test.policy.loc>
   </properties>
+
   <build>
     <plugins>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>
-            @{argLine} ${jetty.surefire.argLine} --add-reads org.eclipse.jetty.client=jetty.servlet.api --add-modules java.security.jgss --add-modules jetty.servlet.api --add-modules org.eclipse.jetty.jmx --add-modules org.slf4j
+            @{argLine} ${jetty.surefire.argLine}
+            --add-modules java.security.jgss
+            --add-modules org.eclipse.jetty.jmx
+            --add-modules org.slf4j
           </argLine>
         </configuration>
       </plugin>
